// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview component <Map /> should render address with toevoeging correctly 1`] = `
<div
  className="preview-map"
>
  <div
    className="row"
  >
    <div
      className="col-5 col-md-4"
    >
      <div
        className="preview-map__item-label"
      >
        Location
      </div>
    </div>
    <div
      className="col-5 col-md-7"
    >
      <div
        className="preview-map__item-value"
      >
        <div>
          <div>
            Hell 666C-3, 1087JC Amsterdam
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview component <Map /> should render only address correctly 1`] = `
<div
  className="preview-map"
>
  <div
    className="row"
  >
    <div
      className="col-5 col-md-4"
    >
      <div
        className="preview-map__item-label"
      >
        Location
      </div>
    </div>
    <div
      className="col-5 col-md-7"
    >
      <div
        className="preview-map__item-value"
      >
        <div>
          <div>
            Hell 666C, 1087JC Amsterdam
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview component <Map /> should render only latlong correctly 1`] = `
<div
  className="preview-map"
>
  <div
    className="row"
  >
    <div
      className="col-5 col-md-4"
    >
      <div
        className="preview-map__item-label"
      >
        Location
      </div>
    </div>
    <div
      className="col-5 col-md-7"
    >
      <div
        className="preview-map__item-value"
      >
        <div>
          <div>
            Geen adres gevonden
          </div>
          <div
            className="preview-map__item-value-map"
          >
            <Styled(Component)
              lat={4}
              lng={52}
              mapOptions={
                Object {
                  "attributionControl": true,
                  "center": Array [
                    52.3731081,
                    4.8932945,
                  ],
                  "crs": Object {
                    "R": 6378137,
                    "code": "EPSG:28992",
                    "distance": [Function],
                    "getProjectedBounds": [Function],
                    "infinite": false,
                    "latLngToPoint": [Function],
                    "pointToLatLng": [Function],
                    "project": [Function],
                    "projection": Object {
                      "bounds": Object {
                        "max": Object {
                          "x": 595401.92,
                          "y": 903401,
                        },
                        "min": Object {
                          "x": -285401,
                          "y": 22598.08,
                        },
                      },
                      "proj4def": "+proj=sterea +lat_0=52.15616055555555 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +units=m +towgs84=565.2369,50.0087,465.658,-0.406857330322398,0.350732676542563,-1.8703473836068,4.0812 +no_defs",
                      "project": [Function],
                      "unproject": [Function],
                    },
                    "scale": [Function],
                    "transformation": Object {
                      "_a": 1,
                      "_b": 285401.92,
                      "_c": -1,
                      "_d": 903401.92,
                    },
                    "unproject": [Function],
                    "wrapLatLng": [Function],
                    "wrapLatLngBounds": [Function],
                    "zoom": [Function],
                  },
                  "dragging": true,
                  "maxBounds": Array [
                    Array [
                      52.25168,
                      4.64034,
                    ],
                    Array [
                      52.50536,
                      5.10737,
                    ],
                  ],
                  "scrollWheelZoom": false,
                  "tap": false,
                  "zoom": 10,
                  "zoomControl": false,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview component <Map /> should render valid adrress and map with latlong correctly 1`] = `
<div
  className="preview-map"
>
  <div
    className="row"
  >
    <div
      className="col-5 col-md-4"
    >
      <div
        className="preview-map__item-label"
      >
        Location
      </div>
    </div>
    <div
      className="col-5 col-md-7"
    >
      <div
        className="preview-map__item-value"
      >
        <div>
          <div>
            Hell 666C, 1087JC Amsterdam
          </div>
          <div
            className="preview-map__item-value-map"
          >
            <Styled(Component)
              lat={4}
              lng={52}
              mapOptions={
                Object {
                  "attributionControl": true,
                  "center": Array [
                    52.3731081,
                    4.8932945,
                  ],
                  "crs": Object {
                    "R": 6378137,
                    "code": "EPSG:28992",
                    "distance": [Function],
                    "getProjectedBounds": [Function],
                    "infinite": false,
                    "latLngToPoint": [Function],
                    "pointToLatLng": [Function],
                    "project": [Function],
                    "projection": Object {
                      "bounds": Object {
                        "max": Object {
                          "x": 595401.92,
                          "y": 903401,
                        },
                        "min": Object {
                          "x": -285401,
                          "y": 22598.08,
                        },
                      },
                      "proj4def": "+proj=sterea +lat_0=52.15616055555555 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +units=m +towgs84=565.2369,50.0087,465.658,-0.406857330322398,0.350732676542563,-1.8703473836068,4.0812 +no_defs",
                      "project": [Function],
                      "unproject": [Function],
                    },
                    "scale": [Function],
                    "transformation": Object {
                      "_a": 1,
                      "_b": 285401.92,
                      "_c": -1,
                      "_d": 903401.92,
                    },
                    "unproject": [Function],
                    "wrapLatLng": [Function],
                    "wrapLatLngBounds": [Function],
                    "zoom": [Function],
                  },
                  "dragging": true,
                  "maxBounds": Array [
                    Array [
                      52.25168,
                      4.64034,
                    ],
                    Array [
                      52.50536,
                      5.10737,
                    ],
                  ],
                  "scrollWheelZoom": false,
                  "tap": false,
                  "zoom": 10,
                  "zoomControl": false,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
